<resources>
    <string name="app_name">Assignment 08</string>
    <string name="main_activity_title">Welcome!!</string>
    <string name="main_activity_start_button_text">Start</string>
    <string name="create_user_activity_title">User Info</string>

    <string name="name_text_view">Name:</string>
    <string name="email_text_view">Email:</string>
    <string name="age_text_view">Phone:</string>
    <string name="country_text_view">State:</string>
    <string name="DoB_text_view">DoB:</string>
    <string name="contact_info_text_view">Contact Info</string>
    <string name="demographics_text_view">Demographics</string>
    <string name="marital_status_text_view">Marital Status:</string>
    <string name="edu_text_view">Edu Level:</string>

    <string name="name_edit_text_hint">Enter Name</string>
    <string name="email_edit_text_hint">Enter Email</string>
    <string name="age_edit_text_hint">Enter Phone</string>
    <string name="country_selected">N/A</string>
    <string name="DoB_selected">N/A</string>
    <string name="marital_selected">N/A</string>
    <string name="edu_selected">N/A</string>

    <string name="country_select_button">Select</string>
    <string name="DoB_select_button">Select</string>
    <string name="marital_select_button">Select</string>
    <string name="edu_select_button">Select</string>
    <string name="submit_button">Submit</string>

    <string name="select_country_text_view">State</string>
    <string name="country_description_text_view">Select your state:</string>
    <string name="country_cancel_button">Cancel</string>

    <string name="select_dob_title">Date of Birth</string>
    <string name="select_dob_subtitle">Select your date of birth:</string>
    <string name="dob_cancel_button">Cancel</string>
    <string name="dob_submit_button">Submit</string>

    <string name="marital_status_title">Marital Status</string>
    <string name="marital_status_description">Select your marital status:</string>
    <string name="edu_level_title">Education Level</string>
    <string name="edu_level_description">Select your education level:</string>

    <string name="profile_activity_title">Profile</string>

</resources>